# Nintendough

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
Doxygen/: Doxyfile
app/: CMakeLists.txt
app/examples/: CMakeLists.txt  scratch.cpp
app/include/nintendough/: common.hpp  error.hpp  types.hpp  version.hpp
app/include/nintendough/component/: bus.hpp  cpu.hpp  error.hpp  instruction.hpp  module.hpp
app/include/nintendough/cpu/: 6502.hpp  bus.hpp  error.hpp  instruction.hpp  module.hpp  types.hpp
app/include/nintendough/error/: base_error.hpp  module.hpp  source_location.hpp
app/include/nintendough/log/: defaults.hpp  error.hpp  logger.hpp  module.hpp
app/include/nintendough/utils/: error.hpp  fs_wrapper.hpp  module.hpp  system_defaults.hpp
app/src/: CMakeLists.txt  main.cpp
app/src/component/: bus.cpp  cpu.cpp  error.cpp  instruction.cpp
app/src/cpu/: 6502.cpp  bus.cpp  error.cpp
app/src/error/: base_error.cpp  source_location.cpp
app/src/log/: error.cpp  logger.cpp
app/src/utils/: error.cpp  fs_wrapper.cpp  system_defaults.cpp
app/tests/: CMakeLists.txt  error_module_test.cpp  log_module_test.cpp  utils_module_test.cpp
config/: sys-config.json
docs/doxygen/: Doxyfile
tooling/: settings.py
